; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_parport_joypad.c_parport_joypad_get_buttons.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_parport_joypad.c_parport_joypad_get_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parport_joypad = type { i32 }

@parport_pads = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @parport_joypad_get_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parport_joypad_get_buttons(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.parport_joypad*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** @parport_pads, align 8
  %7 = load i32, i32* %3, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %6, i64 %8
  %10 = bitcast i32* %9 to %struct.parport_joypad*
  store %struct.parport_joypad* %10, %struct.parport_joypad** %5, align 8
  %11 = load %struct.parport_joypad*, %struct.parport_joypad** %5, align 8
  %12 = icmp ne %struct.parport_joypad* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.parport_joypad*, %struct.parport_joypad** %5, align 8
  %16 = getelementptr inbounds %struct.parport_joypad, %struct.parport_joypad* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @BITS_COPY16_PTR(i32* %14, i32 %17)
  br label %22

19:                                               ; preds = %2
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @BIT256_CLEAR_ALL_PTR(i32* %20)
  br label %22

22:                                               ; preds = %19, %13
  ret void
}

declare dso_local i32 @BITS_COPY16_PTR(i32*, i32) #1

declare dso_local i32 @BIT256_CLEAR_ALL_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
